--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <header>
         <div>
           <h1>Awaken</h1>
-          <div class="brand">Um complemento para pesquisas do Sleeper Fantasy.</div>
+          <div class="brand">Atenção: As buscas ainda não verificam jogadores de bye.</div>
         </div>
       </header>
 
