--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     footer a { color:var(--accent); text-decoration:none; font-weight:700; }
 
     /* responsive */
-    @media (max-width:1000px){
+    <!-- @media (max-width:1000px){
       .col-left, .col-right { display:none; }
       .col-center { width:100%; }
       .page { padding:12px; }
@@ -202,7 +202,7 @@
       .carousel-content { font-size: 1rem; padding: 16px; }
       .carousel button { width: 40px; height: 40px; }
     }
-
+ -->
   .carousel {
 	align-itens:center;
       position: relative;
