--- a/index.html
+++ b/index.html
@@ -310,9 +310,15 @@
     <!-- COLUNA ESQUERDA: pesquisas (30%) -->
     <div class="col-left">
       <header>
-        <div>
-          <left><img src="https://i.ibb.co/KxQgNLnp/awaken225.png" height="55px" width="255" alt="Awaken"></left>
-          <div class="brand">Atenção: As buscas ainda não verificam jogadores de bye.</div>
+         <left><img src="https://i.ibb.co/KxQgNLnp/awaken225.png" height="55px" width="255" alt="Awaken"></left>
+		  <div class="controls">
+      <button id="zoomIn" class="zoom-btn" title="Aumentar ( + )" aria-label="Aumentar zoom">🔍+</button> &nbsp;
+      <button id="zoomOut" class="zoom-btn" title="Diminuir ( - )" aria-label="Diminuir zoom">🔍-</button> &nbsp;
+      <button id="reset" class="zoom-btn" title="Resetar zoom (0)" aria-label="Resetar zoom">⟳</button>&nbsp;
+      <button id="darkToggle" class="zoom-btn" title="DarkMode">🌙 / ☀️</button> &nbsp;
+    </div>	
+ 	  
+    <main class="brand">Atenção: As buscas ainda não verificam jogadores de bye.</div>
         </div>
       </header>
 
@@ -396,13 +402,7 @@
 
     <!-- COLUNA DIREITA: reservado + dark mode top -->
        <div class="col-right">
-      <div align=center>
-    <button id="darkToggle" class="zoom-btn"title="DarkMode" >🌙 / ☀️</button> &nbsp;
-    <button id="zoomIn" class="zoom-btn" title="Aumentar ( + )" aria-label="Aumentar zoom">+</button>&nbsp;
-    <button id="zoomOut" class="zoom-btn" title="Diminuir ( - )" aria-label="Diminuir zoom">-</button>&nbsp;
-    <button id="reset" class="zoom-btn" title="Resetar zoom (0)" aria-label="Resetar zoom">⟳</button>&nbsp;
-    <div>&nbsp;</div>
-    </div>
+ 
     <div align=center>
   <div class="carousel" id="carousel" aria-roledescription="carousel">
     <div class="carousel-inner" id="carouselInner"></div>
