--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
       <button id="zoom-In" class="zoom-btn" title="Aumentar ( + )" aria-label="Aumentar zoom">🔍+</button> &nbsp;
       <button id="zoom-Out" class="zoom-btn" title="Diminuir ( - )" aria-label="Diminuir zoom">🔍-</button> &nbsp;
       <button id="reset" class="zoom-btn" title="Resetar zoom (0)" aria-label="Resetar zoom">⟳</button>&nbsp;
+	  <div id="zoomLabel" class="zoom-label" aria-live="polite">100%</div>
       <button id="darkToggle" class="zoom-btn" title="DarkMode">🌙 / ☀️</button> &nbsp;
     </div>	
  	  </header> 
@@ -399,7 +400,7 @@
       <div id="resultado"></div>
     </div>
 
-    <!-- COLUNA DIREITA: reservado + dark mode top -->
+    <!-- COLUNA DIREITA -->
        <div class="col-right">
  
     <div align=center>
@@ -425,7 +426,6 @@
     <div id="accessCount">GMs em ação: 0</div>
     <div><a href="mailto:scrum.moura@gmail.com">Algo errado? Novas ideias? Manda pra cá.</a></div>
   </footer>
-</body>
 	
 <script>
 /* --------------------------
@@ -472,7 +472,7 @@ const franchiseActions = document.getElementById("franchiseActions");
 /* dark toggle */
 document.getElementById("darkToggle").addEventListener("click", ()=>{
   document.body.classList.toggle("dark");
-  document.getElementById("darkToggle").textContent = document.body.classList.contains("dark") ? "☀️ Light Mode" : "🌙 Dark Mode";
+  document.getElementById("darkToggle").textContent = document.body.classList.contains("dark") ? "☀️ /🌙";
 });
 
 // Zoom In/Out
@@ -501,7 +501,8 @@ document.getElementById("zoom-out").addEventListener("click", () => {
 function statusClass(status){
   if(!status) return "status-Healthy";
   if(status === "Out") return "status-Out";
-  if(status === "Questionable" || status === "Doubtful") return "status-Questionable";
+  if(status === "Questionable" return "status-Questionable";
+  if(status === "Doubtful") return "status-Doubtful";
   if(status === "IR") return "status-IR";
   if(status === "Suspended") return "status-Suspended";
   return "status-Healthy";
