--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Awaken - v37.4 - 10OUT25</title>
+  <title>Awaken - v37.5 - 10OUT25</title>
   <style>
     :root{
       --bg-left-dark: linear-gradient(90deg, rgba(10,10,10,1) 0%, rgba(40,40,40,0.9) 60%);
@@ -224,7 +224,7 @@
     <div class="col-left">
       <header>
         <div>
-          <h1><img src="https://i.ibb.co/KxQgNLnp/awaken225.png"></h1>
+          <h1><img src="https://i.ibb.co/KxQgNLnp/awaken225.png" widht="265px" height="65px" ></h1>
           <div class="brand">Um complemento para pesquisas do Sleeper Fantasy.</div>
         </div>
       </header>
@@ -310,11 +310,11 @@
     <!-- COLUNA DIREITA: reservado + dark mode top -->
     <div class="col-right">
       <div style="position:sticky; top:10px; display:flex; justify-content:flex-end;">
-        <button class="dark-toggle" id="darkToggle">☀️ ON</button>
+        <button class="dark-toggle" id="darkToggle">🌙 OFF</button>
       </div>
 
       <div style="margin-top:18px;" class="panel">
-        <img src="https://i.ibb.co/0j7zSGbY/jogos-week6.png" width="330px" height="420px" alt="Jogos Semana 6 - 2025">
+        <img src="https://i.ibb.co/0j7zSGbY/jogos-week6.png" width="40%" height="40%" alt="Jogos Semana 6 - 2025">
 	<div> 
 </div>
       </div>
